<resources>
    <string name="app_name">DigiScore</string>
    <string name="team_a_name">N. Marion</string>
    <string name="team_fouls_label">Fouls:</string>
    <string name="team_b_name">Wilsonville</string>
    <string name="team_a_score">34</string>
    <string name="team_a_fouls">4</string>
    <string name="team_b_fouls">5</string>
    <string name="team_b_score">29</string>
    <string name="players_label">players:</string>
    <string name="add_point_s_label">Add Point(s)</string>
    <string name="add_foul_label">Add Foul</string>
    <string name="basketball_court_description">basketball_court</string>
    <string name="hint_value">0</string>
    <string name="team_a_player_1_text">1</string>
    <string name="pound_sign">#</string>
    <string name="team_a_player_2_text">2</string>
    <string name="team_a_player_3_text">3</string>
    <string name="team_a_player_4_text">4</string>
    <string name="team_a_player_5_text">5</string>
    <string name="vs">VS</string>
    <string name="team_b_player_1_text">1</string>
    <string name="team_b_player_2_text">2</string>
    <string name="team_b_player_3_text">3</string>
    <string name="team_b_player_4_text">4</string>
    <string name="team_b_player_5_text">5</string>
</resources>
