<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/bball_court"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="top"
        android:paddingTop="8dp"
        android:baselineAligned="false">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/team_a_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a_name"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="@dimen/team_label_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_a_score"
                android:hint="0"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/team_a_score"
                android:textSize="@dimen/team_score_text_size"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_a_fouls_label"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:hint="0"
                    android:text="@string/team_fouls_label"
                    android:textAllCaps="true"
                    android:textSize="@dimen/foul_label_text_size" />

                <TextView
                    android:id="@+id/team_a_fouls_count"
                    android:paddingRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:hint="0"
                    android:text="@string/team_a_fouls"
                    android:textSize="@dimen/team_fouls_text_size" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/team_b_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b_name"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/team_label_text_size"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_b_score"
                android:hint="0"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/team_b_score"
                android:textSize="@dimen/team_score_text_size"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_fouls_label"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:hint="0"
                    android:text="@string/team_fouls_label"
                    android:textAllCaps="true"
                    android:textSize="@dimen/foul_label_text_size" />

                <TextView
                    android:id="@+id/team_b_fouls_count"
                    android:paddingRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:hint="0"
                    android:text="@string/team_b_fouls"
                    android:textSize="@dimen/team_fouls_text_size" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>